--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
     "rxjs": "6.0.0",
+    "rxjs-compat": "^6.5.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -43,6 +44,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "~2.7.2",
+    "moment": "2.24.0"
   }
 }
